src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alternate_Phone_No__c</fullName>
        <label>Alternate Phone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_State__c</fullName>
        <formula>City__r.Branch_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>City__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Centre_City__c.District__c</field>
                <operation>equals</operation>
                <valueField>$Source.District__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Centre_City__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>City__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_No__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Cust No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>ADILABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHITTOOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIRUPATI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANANTPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HYDERABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KADAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARIMNAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHBUBNAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KURNOOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NALGONDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIZAMABAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RANGAREDDY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARANGAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIJAYAWADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST GODAWARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRISHNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUNTUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRAKASHAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NELLORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRIKAKULAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIJAYANAGARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISHAKHAPATNAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST GODAWARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODALGURI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARIMGANJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SILCHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CACHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAMRUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>City__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Center__c</fullName>
        <formula>City__r.Service_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>TEXT( City__r.Local_Upcountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ANDHRA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUNCHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHATTISGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DADRA &amp; NAGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAMAN &amp; DIU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARYANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMACHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAMMU &amp; KASHMIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JHARKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUJRAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARNATAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KERALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIPUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEGHALAYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHYA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHARASHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORISSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIZORAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAGALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUNJAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMIL NADU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRIPURA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJASTHAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIKKIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PONDICHERRY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>trgCustomerID__c</fullName>
        <externalId>true</externalId>
        <label>trgCustomerID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_PHONE3</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.PHONE1</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>ACCOUNT.PHONE1</field>
            <operation>equals</operation>
        </filters>
        <label>All Customers</label>
        <sharedTo>
            <group>CallAgent1</group>
            <group>IndentApprover</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <group>Admin</group>
            <group>CallAgent1</group>
            <group>Finance</group>
            <group>IndentApprover</group>
            <group>Marketing</group>
            <group>Sales</group>
            <group>Service</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Detail_Page</fullName>
        <active>true</active>
        <label>Detail Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>EnterpriseAccount</fullName>
        <active>true</active>
        <description>B2B Enterprise Accounts</description>
        <label>Enterprise Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Person_Account</fullName>
        <active>true</active>
        <label>Person Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alternate_Phone_No_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN (   Alternate_Phone_No__c   ) = 0,
  REGEX(  Alternate_Phone_No__c, &quot;0[0-9]{10}&quot;)))</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_is_Mandatory</fullName>
        <active>false</active>
        <description>Billing Address is mandatory</description>
        <errorConditionFormula>AND(
(Phone  &lt;&gt;  &quot;&quot;),
OR(
(BillingCity = &quot;&quot; ),
(BillingCountry = &quot;&quot; ),
(BillingState  = &quot;&quot;) ,
(BillingStreet  = &quot;&quot; ),
ISNULL(BillingCity ),
ISNULL(BillingCountry ),
ISNULL(BillingState) ,
ISNULL(BillingStreet )
)
)</errorConditionFormula>
        <errorMessage>Please fill in the Billing Address and Shipping Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Name_or_Address_Contains_Apostr</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(FirstName ,&quot;&apos;&quot;) ||  CONTAINS(LastName ,&quot;&apos;&quot;)  || CONTAINS(BillingCity ,&quot;&apos;&quot;) ||  CONTAINS(  BillingCountry  ,&quot;&apos;&quot;) || CONTAINS(   BillingStreet ,&quot;&apos;&quot;)  || CONTAINS(   ShippingCity ,&quot;&apos;&quot;)  || CONTAINS( ShippingCountry  ,&quot;&apos;&quot;) ||  CONTAINS(   ShippingState ,&quot;&apos;&quot;)  || CONTAINS(  ShippingStreet  ,&quot;&apos;&quot;)</errorConditionFormula>
        <errorMessage>Invalid &apos; found in Customer Name or Address information . Please remove and save the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
LEN (  Phone  ) = 0, 
REGEX( Phone, &quot;0[0-9]{10}&quot;)))</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_No_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN (   PersonMobilePhone   ) = 0,
  REGEX(  PersonMobilePhone, &quot;0[0-9]{10}&quot;)))</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonHomePhone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN (   PersonHomePhone   ) = 0,
  REGEX(  PersonHomePhone, &quot;0[0-9]{10}&quot;)))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonMobilePhone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
  LEN (   PersonMobilePhone   ) = 0,
  REGEX(  PersonMobilePhone, &quot;0[0-9]{10}&quot;)))</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PersonOtherPhone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
 OR(
LEN (    PersonOtherPhone  ) = 0,
  REGEX(  PersonOtherPhone , &quot;0[0-9]{10}&quot;))
)</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_No_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
LEN ( Alternate_Phone_No__c ) = 0, 
REGEX( Alternate_Phone_No__c, &quot;91-[0-9]{10}&quot;)))</errorConditionFormula>
        <errorMessage>LANDLINE: Please put in the correct phone no. Eg. 0(STD Code)Phone No. - 01122120767; when STD Code is 011

MOBILE: Please put in the correct phone no. Eg. 0Mobile No.
Ex: 09988899888</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Length_of_Address</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(BillingStreet + &apos; &apos; +BillingCity + &apos; &apos; + BillingState + &apos; &apos; + BillingCountry + &apos; &apos; + BillingPostalCode) &gt; 150 || LEN(ShippingStreet + &apos; &apos; +ShippingCity + &apos; &apos; + ShippingState + &apos; &apos; + ShippingCountry + &apos; &apos; + ShippingPostalCode) &gt; 150</errorConditionFormula>
        <errorMessage>Address cannot be greater than 150 characters.</errorMessage>
    </validationRules>
</CustomObject>